tools/tests/errors/break_in_nested_function.ki
while True:
    var f = Function():
        break
    f()
